--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+.target {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.target__box {
+  height: 100px;
+  width: 100px;
+  margin: 20px;
+  background: gray;
+  border-radius: 20px;
+}
+
+.play {
+  background: blue;
+}
+
+.selected {
+  background: black;
+  color: white;
+}
+
 .App {
   text-align: center;
 }
