--- a/src/routes/Room.css
+++ b/src/routes/Room.css
@@ -4,11 +4,24 @@
   flex-direction: row;
 }
 
+.targets {
+  height: fit-content;
+}
+
 .room__container {
   width: 100vh;
   height: 100vw;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.room__header {
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  top: 50px;
 }
 
 .target__title {
@@ -31,8 +44,8 @@
   width: 50px;
   margin: 10px;
   background: #bbbdbf;
-  border-radius: 20px;
-  transition: opacity ease 200ms;
+  border-radius: 15px;
+  transition: all ease 200ms;
   cursor: pointer;
   opacity: 0.3;
 }
@@ -43,9 +56,93 @@
 
 .selected {
   opacity: 1;
-  color: white;
+  border-radius: 50%;
 }
 
 .play {
   background: white;
+}
+
+.optionBar__container {
+  width: 90%;
+  max-width: 420px;
+  height: 70px;
+  position: absolute;
+  background: #1e2226;
+  bottom: 20px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.optionBar__option {
+  transition: all 200ms ease;
+  cursor: pointer;
+  height: 50px;
+  text-align: center;
+  border-radius: 20%;
+  width: 60px;
+  position: relative;
+  margin: 0 10px;
+}
+.optionBar__icon {
+  transition: all 200ms ease;
+  position: relative;
+  top: calc(50% - 12px);
+  font-size: 24px;
+  color: #a7a8ad;
+}
+
+.optionBar__button {
+  line-height: 50px;
+  font-weight: bold;
+  font-size: 18px;
+  margin-left: auto;
+  margin-right: 10px;
+  background: #0084ff;
+  padding: 0 20px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: opacity ease 200ms;
+}
+
+.optionBar__button:hover {
+  opacity: 0.7;
+}
+
+.optionBar__option:hover {
+  background-color: #2f343c;
+}
+
+.optionBar__option:hover .optionBar__icon {
+  color: white;
+}
+
+.overlay {
+  z-index: 1;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.8);
+  will-change: opacity;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
+.optionBar__input {
+  width: 80px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 20px;
+  border: none;
+  background-color: #2f343c;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box;
+  transition: all 200ms ease-in-out;
+  color: white;
+  outline: none;
+  padding: 10px;
+  margin-left: 10px;
 }
