--- a/src/routes/Landing.css
+++ b/src/routes/Landing.css
@@ -59,3 +59,12 @@
   box-shadow: -1px 8px 33px 17px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
 }
+
+@media only screen and (max-width: 850px) {
+  .landing__container {
+    flex-direction: column;
+  }
+  .landing__image {
+    height: 200px;
+  }
+}
