--- a/src/routes/Room.css
+++ b/src/routes/Room.css
@@ -65,7 +65,7 @@
 
 .optionBar__container {
   width: 90%;
-  max-width: 420px;
+  max-width: 620px;
   height: 70px;
   position: absolute;
   background: #1e2226;
@@ -145,4 +145,26 @@
   outline: none;
   padding: 10px;
   margin-left: 10px;
+}
+
+.tempo-container {
+  width: 100%;
+  max-width: 275px;
+  padding: 0 30px;
+}
+
+.tempo-container .MuiSlider-marked {
+  margin: 0;
+}
+
+.tempo-container .MuiSlider-markLabel {
+  color: white;
+}
+
+.MuiTypography-body1 {
+  font-size: 17px;
+  font-weight: bold;
+  text-align: left;
+  opacity: 0.7;
+  padding-bottom: 10px;
 }
