--- a/src/routes/Room.css
+++ b/src/routes/Room.css
@@ -168,3 +168,23 @@
   opacity: 0.7;
   padding-bottom: 10px;
 }
+
+.room__online {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.avatar__icon {
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  margin: 5px;
+}
+
+.letter__icon {
+  line-height: 45px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+}
