--- a/src/routes/Room.css
+++ b/src/routes/Room.css
@@ -175,6 +175,64 @@
   right: 20px;
 }
 
+.room__share {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+.room__share span {
+  color: #0084ff;
+  padding-left: 10px;
+}
+
+.room__copy {
+  transition: all 200ms ease;
+  cursor: pointer;
+  height: 50px;
+  text-align: center;
+  border-radius: 20%;
+  width: 30px;
+  position: relative;
+  margin: 0 10px;
+}
+
+.room__copy {
+  height: 20px;
+}
+
+.room__copy:hover {
+  opacity: 0.7;
+}
+
+.room__copy:hover {
+  background-color: #2f343c;
+}
+
+.room__copy:hover .icon {
+  color: white;
+}
+
+input {
+  width: 200px;
+  height: 60px;
+  border-radius: 20px;
+  font-size: 20px;
+  border: none;
+  opacity: 0.4;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box;
+  padding: 20px;
+  margin-bottom: 20px;
+  transition: all 200ms ease-in-out;
+  color: white;
+}
+
 .avatar__icon {
   border-radius: 50%;
   height: 45px;
